    <resources>

    <string name="app_name" translatable="false">SYM - Labo 1</string>
    <string name="main_email_hint">Your e-mail address</string>
    <string name="main_password_hint">Your password</string>
    <string name="main_mandatory_field">Required field cannot be left blank</string>
    <string name="main_validate_btn">Validate</string>
    <string name="main_cancel_btn">Cancel</string>
    <string name="main_create_account">New account</string>
    <string name="main_icon_desc">Application\'s logo</string>
    <string name="main_email_format">Invalid email format</string>
    <string name="main_dialog_error_title">Wrong credentials</string>
    <string name="main_dialog_confirm">OK</string>
    <string name="register_email">New email</string>
    <string name="register_password">New password</string>
    <string name="register_validate_btn">Create Account</string>

</resources>
