<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/app_horizontal_margin"
    android:layout_marginEnd="@dimen/app_horizontal_margin"
    android:layout_marginTop="@dimen/app_vertical_margin"
    android:layout_marginBottom="@dimen/app_vertical_margin"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="129dp"
        android:layout_height="147dp"
        android:contentDescription="@string/main_icon_desc"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/create_account"
        app:tint="@color/colorPrimaryDark" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_email" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_title"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/register_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email"
            android:layout_marginTop="@dimen/app_vertical_separation"
            android:text="@string/register_password" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_title"
            android:hint="@string/register_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/app_vertical_separation"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_cancel_btn" />

            <Button
                android:id="@+id/register_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_horizontal_separation"
                android:text="@string/register_validate_btn" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>